Cant edit type of exercise, refresh of list in exercse of program coach context, edit/add order

--- a/front/src/app/coach/exercises/exercises-list/exercises-list.component.html
+++ b/front/src/app/coach/exercises/exercises-list/exercises-list.component.html
@@ -19,7 +19,7 @@
                                               [exerciseTypeEnum]="exercise.type"></pulpe-exercises-type-img>
                 </td>
                 <td>
-                    <p>{{exercise.name}}</p>
+                    <p>{{exercise.name}} <span *ngIf="displayOrder">(n°: {{exercise.order}})</span></p>
                 </td>
                 <td>
                     <div [ngSwitch]="exercise.type">
