--- a/front/src/app/coach/exercises/exercise-form-dialog/exercise-form-dialog.component.html
+++ b/front/src/app/coach/exercises/exercise-form-dialog/exercise-form-dialog.component.html
@@ -25,7 +25,7 @@
                                        required>
                             </md-input-container>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="isAddMode">
                             <md-select placeholder="Choisissez un type d'exercice" class="col-md-12"
                                        formControlName="type" required
                                        (change)="refreshSpecificPropertiesOnChangeExerciseType()">
