--- a/mobile/src/components/exercise-training-execution/exercise-training-execution.html
+++ b/mobile/src/components/exercise-training-execution/exercise-training-execution.html
@@ -47,8 +47,9 @@
 
 <ion-row>
     <ion-col text-center>
-        <button ion-button round [disabled]="!delayIsFinished" (click)="terminate()" color="secondary">{{'EXERCISE_DONE' | translate}}
+        <button ion-button round [disabled]="exerciseExecutionContext.isInProgress()" (click)="startExercise()" color="secondary">
+            {{(exerciseExecutionContext.willStart() ? 'START_EXERCISE' : 'EXERCISE_DONE') | translate}}
         </button>
-        <timer [timeInSeconds]="2" [autoStart]="true" (finished)="terminateDelay()"></timer>
+        <timer *ngIf="exerciseExecutionContext.isInProgress()" [timeInSeconds]="2" [autoStart]="true" (finished)="terminateDelay()"></timer>
     </ion-col>
 </ion-row>
