--- a/front/src/app/member/evolution/measurements-list/measurements-list.component.html
+++ b/front/src/app/member/evolution/measurements-list/measurements-list.component.html
@@ -5,50 +5,14 @@
     <div class="col-md-12">
         <div class="measurements-list">
             <md-list-item *ngFor="let measurement of member.measurements; let last = last">
-                <div class="row">
+                <div class="row" *ngIf="measurement.name !== MeasurementEnum.Name[MeasurementEnum.Name.Imc]">
                     <div class="col-md-6 text-center">
-                        <div [ngSwitch]="measurement.name">
-                        <span *ngSwitchCase="'SIZE'" class="text-black-primary text-muted">
-                            Taille
-                        </span>
-                            <span *ngSwitchCase="'WEIGHT'" class="text-black-primary text-muted">
-                            Poids
-                        </span>
-                            <span *ngSwitchCase="'HIP'" class="text-black-primary text-muted">
-                            Tour de Hanche
-                        </span>
-                            <span *ngSwitchCase="'WAIST'" class="text-black-primary text-muted">
-                            Tour de taille
-                        </span>
-                            <span *ngSwitchCase="'CHEST'" class="text-black-primary text-muted">
-                            Tour de poitrine
-                        </span>
-                            <span *ngSwitchCase="'SHOULDERS'" class="text-black-primary text-muted">
-                            Epaules
-                        </span>
-                            <span *ngSwitchCase="'RIGHT_ARM'" class="text-black-primary text-muted">
-                            Bras droit
-                        </span>
-                            <span *ngSwitchCase="'LEFT_ARM'" class="text-black-primary text-muted">
-                            Bras gauche
-                        </span>
-                            <span *ngSwitchCase="'RIGHT_CALF'" class="text-black-primary text-muted">
-                            Mollet droit
-                        </span>
-                            <span *ngSwitchCase="'LEFT_CALF'" class="text-black-primary text-muted">
-                            Mollet gauche
-                        </span>
-                            <span *ngSwitchCase="'RIGHT_THIGH'" class="text-black-primary text-muted">
-                            Cuisse droite
-                        </span>
-                            <span *ngSwitchCase="'LEFT_THIGH'" class="text-black-primary text-muted">
-                            Cuisse gauche
-                        </span>
-                        </div>
+                        <p class="text-black-primary text-muted">
+                            {{measurementConverter.getLabelFrom(measurement.name)}}</p>
                     </div>
-                    <div *ngIf="measurement.name !== 'IMC'" class="col-md-6 text-center">
+                    <div class="col-md-6 text-center">
                         <div>
-                        <span class="text-black-primary text-muted">
+                            <span class="text-black-primary text-muted">
                             {{measurement.value}} {{measurement.unit}}
                         </span>
                         </div>
